--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <title>Popup com JavaScript</title>
 </head>
 <body>
+    <button>Clique aqui</button>
+
+    <div class="popup-wrapper">
+        <div class="popup">
+        <div class="popup-close">x</div>
+            <div class="popup-content">
+                <h2>Popup deselegante</h2>
+                <p>autor do popup foi o programador Ethan Zuckerman.</p>
+                <a href="#">Saiba mais"</a>
+            </div>/
+        </div>
+    </div>
+
     
 </body>
-<script href="./app.js"></script>
+<script href="./app.js"></script>   
 </html>
