--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
             <div class="popup-content">
                 <h2>Popup deselegante</h2>
                 <p>autor do popup foi o programador Ethan Zuckerman.</p>
-                <a href="#">Saiba mais"</a>
-            </div>/
+                <a class="popup-link" href="#">Saiba mais"</a>
+            </div>
         </div>
     </div>
 
-    
+    <script src="./app.js"></script>    
 </body>
-<script href="./app.js"></script>   
 </html>
